src/test/deca/context/invalid/self/etOu.deca
{
if(true && 2){
    println("Mauvaise pioche");
}else{
    println("AH!");
}
}